; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_common/extr_eap_gpsk_common.c_eap_gpsk_mic_len.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_common/extr_eap_gpsk_common.c_eap_gpsk_mic_len.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EAP_GPSK_VENDOR_IETF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @eap_gpsk_mic_len(i32 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @EAP_GPSK_VENDOR_IETF, align 4
  %8 = icmp ne i32 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i64 0, i64* %3, align 8
  br label %14

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  switch i32 %11, label %13 [
    i32 129, label %12
  ]

12:                                               ; preds = %10
  store i64 16, i64* %3, align 8
  br label %14

13:                                               ; preds = %10
  store i64 0, i64* %3, align 8
  br label %14

14:                                               ; preds = %13, %12, %9
  %15 = load i64, i64* %3, align 8
  ret i64 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
